# movie-thing

./: .eslintrc.cjs  .gitignore  borda.ipynb  components.json  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts
api/: index.py  instance.py  plan.txt
api/managers/: sqlManager.py
api/models/: tblClubRanking.py
apy/: borda.py  config.py  index.py  instance.py
apy/managers/: sqlManager.py
apy/models/: tblClubMembership.py  tblWantsToWatch.py
docs/: borda.ipynb  data.csv
prisma/: schema.prisma
src/: env.js  env.mjs
src/api/: app.py
src/api/models/: tblClub.py
src/app/: layout.tsx  page.tsx
src/app/(home)/: add-club-button.tsx  create-club.tsx  join-club.tsx  nav-link.tsx  navbar.tsx  user-clubs.tsx
src/app/watchlist/: page.tsx  save-button.tsx  sortable-movie-list.tsx  sortable-movie-listing.tsx  sortable-movie-utils.ts
src/apy/: app.py  config.py  instance.py
src/apy/managers/: aggregator.py  sqlManager.py
src/apy/models/: clubMembership.py  tblClubMembership.py
src/apy/repository/: sqlRepository.py
src/components/: add-club-button.tsx  create-club.tsx  divider.tsx  header.tsx  join-club.tsx  layout.tsx  movie-listing.tsx  navbar.tsx  reload-club.tsx  theme.tsx
src/components/home/: add-club-button.tsx  create-club.tsx  join-club.tsx
src/lib/: pusher.ts
src/pages/: _app.tsx  index.tsx
src/server/: auth.ts  db.ts
src/styles/: globals.css
src/trpc/: server.ts
src/types/: index.ts  omdb.d.ts
src/utils/: generateJoinCode.ts
v2/: package.json  pnpm-lock.yaml
(+70 files in other folders)
