[tool.poetry]
name = "movie-thing"
version = "0.1.0"
description = ""
authors = ["Jacob Trevor <50667410+JakeTrevor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
