[tool.poetry]
name = "movie-thing"
version = "0.1.0"
description = ""
authors = ["Jacob Trevor <50667410+JakeTrevor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pyflagr = "^1.0.8"
sqlmodel = "^0.0.14"
python-dotenv = "^1.0.1"
pydantic = "^2.6.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
