[tool.poetry]
name = "movie-thing"
version = "0.1.0"
description = ""
authors = ["Jacob Trevor <50667410+JakeTrevor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
sqlmodel = "^0.0.14"
python-dotenv = "^1.0.1"
pydantic = "^2.6.0"
psycopg2 = "^2.9.9"
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.27.0"
black = "^24.1.1"
jupyter = "^1.0.0"
poetry-plugin-export = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
